--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -22,7 +22,9 @@
           <li><a href="#{{ key }}">{{ artist.title }}</a></li>
         {% endfor %}
       </ol>
-      <div><a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="cta">Koupit si vstupenky</a></div>
+      <div>
+        <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="cta">Koupit si vstupenky</a>
+      </div>
     </header>
     <section class="news-list" id="novinky">
       <header id="news">
@@ -82,32 +84,32 @@
 
       <div class="tickets__list">
         <div class="tickets__item tickets__item--disabled">
-          <h3>2-denní</h3>
-          <p>1.&nbsp;vlna vstupenek</p>
+          <h3>1.&nbsp;vlna vstupenek</h3>
+          <p>2-denní</p>
           <p>540&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item tickets__item--disabled">
-          <h3>2-denní</h3>
-          <p>2.&nbsp;vlna vstupenek</p>
+          <h3>2.&nbsp;vlna vstupenek</h3>
+          <p>2-denní</p>
           <p>640&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item  tickets__item--disabled">
-          <h3>2-denní</h3>
-          <p>3.&nbsp;vlna vstupenek</p>
+          <h3>3.&nbsp;vlna vstupenek</h3>
+          <p>2-denní</p>
           <p>740&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item">
-          <h3>1-denní</h3>
-          <p>4.&nbsp;vlna vstupenek</p>
+          <h3>4.&nbsp;vlna vstupenek</h3>
+          <p>1-denní</p>
           <p>690&nbsp;Kč</p>
           <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
         </div>
         <div class="tickets__item">
-          <h3>2-denní</h3>
-          <p>4.&nbsp;vlna vstupenek</p>
+          <h3>4.&nbsp;vlna vstupenek</h3>
+          <p>2-denní</p>
           <p>790&nbsp;Kč</p>
           <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
         </div>
