--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -13,9 +13,12 @@
 {% endblock %}
 
 {% block content %}
-  <main>
-    <header class="hero" id="header">
-      <p>těšíme se na vystoupení</p>
+  <div class="hero" id="header">
+    <hgroup>
+      <h2>18. ročník</h2>
+      <p>#vidimesevlese</p>
+    </hgroup>
+    <section>
       <ol>
         {% for key in event.artists %}
           {% set artist = artists[key] %}
@@ -25,7 +28,9 @@
       <div>
         <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="cta">Koupit si vstupenky</a>
       </div>
-    </header>
+    </section>
+  </div>
+  <main>
     <section class="news-list" id="novinky">
       <header id="news">
         <h2>Novinky</h2>
@@ -115,10 +120,10 @@
         </div>
         <div class="tickets__item tickets__item--onsite">
           <h3>Na místě</h3>
-          <p>2-denní</p>
-          <p>990&nbsp;Kč</p>
           <p>1-denní</p>
           <p>890&nbsp;Kč</p>
+          <p>2-denní</p>
+          <p>990&nbsp;Kč</p>
         </div>
       </div>
 
