--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -60,14 +60,14 @@ body {
   margin: 0 16px;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--accented-font);
   font-weight: normal;
-  text-transform: uppercase;
 }
 
 h2 {
   font-size: 1.9em;
+  text-transform: uppercase;
 }
 
 hr {
@@ -158,6 +158,11 @@ body > header {
   inset-block-start: 0;
   z-index: 1000;
   background-color: var(--background-color);
+  border-image-outset: 0 100vw;
+  border-image-slice: 0 fill;
+  border-image-width: 0;
+  border-image-repeat: stretch;
+  border-image-source: linear-gradient(0deg, var(--background-color), var(--background-color));
 
   h1 {
     line-height: 1;
@@ -256,9 +261,28 @@ section p {
 }
 
 .hero {
+  --text-color: white;
+  color: var(--text-color);
   text-align: center;
   margin-bottom: 2em;
+  padding: 2em clamp(1em, -0.3333rem + 4.4444vw, 2em) clamp(2em, 0rem + 6.6667vw, 6em);
+  background: image-set(
+    cloudinary-url("hero-bg.jpg", '{"dpr": 1}') 1x,
+    cloudinary-url("hero-bg.jpg", '{"dpr": 1.5}') 1.5x,
+    cloudinary-url("hero-bg.jpg", '{"dpr": 2}') 2x
+  ) no-repeat;
+  background-position: center top;
+  background-size: cover;
 
+  hgroup {
+    margin-bottom: 4em;
+  }
+  hgroup>h2 {
+    margin-bottom: 0;
+  }
+  hgroup>p {
+    margin-top: 0;
+  }
   p {
     font-variant-caps: all-petite-caps;
     text-transform: uppercase;
@@ -290,10 +314,23 @@ section p {
     a {
       color: var(--text-color);
       text-decoration: none;
+      text-decoration-thickness: 0;
+      transition: color 300ms ease-in,
+        text-decoration 300ms allow-discrete,
+        text-decoration-thickness 300ms ease-in;
     }
 
     a:hover, a:focus {
+      color: var(--accent3-color);
       text-decoration: underline;
+      text-decoration-thickness: 4px;
+    }
+
+    @starting-style {
+      a {
+        text-decoration: underline;
+        text-decoration-thickness: 1px;
+      }
     }
   }
 }
@@ -309,12 +346,12 @@ section p {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(17, 1fr);
+  grid-auto-flow: dense;
+  gap: 1em;
   @media screen and (min-width: 801px) {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(8, 1fr);
   }
-  grid-auto-flow: dense;
-  gap: 1em;
 
   header {
     grid-column: span 2;
@@ -589,6 +626,7 @@ section p {
       font-size: larger;
       font-weight: bold;
       line-height: 2;
+      text-transform: none;
     }
 
     .button {
@@ -612,6 +650,7 @@ section p {
     position: relative;
     font-size: 1.75em;
     text-shadow: 1px 1px var(--background-color);
+    text-transform: uppercase;
 
     &::before {
       content: "";
