--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -37,15 +37,16 @@
 <header>
   <h1 property="name">
     <a href="/" title="Přejít na hlavní stránku">
-    {% set logoId = "logo" %}
-    {% include "shared/logo.svg" %}
+      {% set logoId = "logo" %}
+      {% include "shared/logo.svg" %}
     </a>
   </h1>
   <div>
     <p class="header__time">
       <time property="startDate" datetime="{{ event.startDate.toISOString() }}">{{ event.startDate.getDate() }}.</time>
       -
-      <time property="endDate" datetime="{{ event.endDate.toISOString() }}">{{ event.endDate.getDate() - 1 }}.&nbsp;{{ event.endDate.getMonth() + 1 }}.&nbsp;{{ event.endDate.getFullYear() }}</time>
+      <time property="endDate" datetime="{{ event.endDate.toISOString() }}">{{ event.endDate.getDate() - 1 }}
+        .&nbsp;{{ event.endDate.getMonth() + 1 }}.&nbsp;{{ event.endDate.getFullYear() }}</time>
     </p>
     <p class="header__location" property="location">{{ event.location }}</p>
   </div>
@@ -122,7 +123,8 @@
                     d="m27.8 25.6.9-5.6h-5.3v-3.9c0-1.6.6-2.8 3-2.8H29V8.2c-1.4-.2-3-.4-4.4-.4-4.6 0-7.8 2.8-7.8 7.8V20h-5v5.6h5v14.1c1.1.2 2.2.3 3.3.3 1.1 0 2.2-.1 3.3-.3V25.6h4.4z"/></svg>
           </a></li>
         <li><a href="https://www.instagram.com/studnicefestival/" target="ig">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 132.004 132">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                 viewbox="0 0 132.004 132">
               <title>Instagram</title>
               <defs>
                 <radialGradient xlink:href="#ig-a" id="ig-c" cx="158.429" cy="578.088" r="65" fx="158.429" fy="578.088"
@@ -158,6 +160,15 @@
   </section>
   <p>© 2017 - {{ currentYear }} Eupathia, z.s.; Web vytvořilo <a href="https://hckr.studio/">hckr.studio</a></p>
 </footer>
+
+<script type="module">
+  const el = document.querySelector("body>header")
+  const observer = new IntersectionObserver(
+    ([e]) => e.target.classList.toggle("is-pinned", e.intersectionRatio < 1),
+    { threshold: [1] }
+  );
+  observer.observe(el);
+</script>
 {% block javascript %}
 {% endblock %}
 {{ spriteTarget() }}
