--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -57,8 +57,16 @@
     <section id="informace-a-upozorneni">
       <a name="map"></a>
       <header>
-        <h2>Info</h2>
+        <h2>Důležité informace</h2>
       </header>
+      <article>
+        <p>Zajímá vás jak je to s&nbsp;dopravou, s&nbsp;jídlem, placením a tak vůbec?
+          Všechny důležité informace jsme pro vás sepsali na samostatné
+          stránce.</p>
+        <p>
+          <a href="/informace/" class="cta">Chci to vidět</a>
+        </p>
+      </article>
     </section>
     <section class="artists-list" id="vystoupi">
       <header id="bands">
