Fix header on non HP pages, transition header bg

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,6 +1,7 @@
 {% extends 'layouts/master.njk' %}
 
 {% block title %}Studnice fest 2024{% endblock %}
+{% set bodyClass = "is-hp" %}
 
 {% block head %}
   <link rel="canonical" href="https://www.studnicefest.cz/">
