--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -25,7 +25,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-TB6TV66');</script>
   <!-- End Google Tag Manager -->
 </head>
-<body vocab="https://schema.org" typeof="Festival">
+<body vocab="https://schema.org" typeof="Festival" class="{{ bodyClass }}">
 <!-- Google Tag Manager (noscript) -->
 <noscript>
   <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TB6TV66" height="0" width="0"
