Info box improvements

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -56,12 +56,11 @@
       <a href="/novinky/" class="cta">Zobrazit všechny novinky</a>
     </section>
     <section id="informace-a-upozorneni">
-      <a name="map"></a>
-      <header>
+      <header id="map">
         <h2>Důležité informace</h2>
       </header>
       <article>
-        <p>Zajímá vás jak je to s&nbsp;dopravou, s&nbsp;jídlem, placením a tak vůbec?
+        <p>Zajímá vás jak je to s&nbsp;dopravou, jídlem, placením a tak vůbec?
           Všechny důležité informace jsme pro vás sepsali na samostatné
           stránce.</p>
         <p>
