--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -375,8 +375,7 @@ section p {
   }
 
   article {
-    container-type: inline-size;
-    container-name: --news;
+    color-scheme: dark;
     border-radius: var(--corner-radius);
     background-color: #000;
     color: #fff;
