--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -15,6 +15,8 @@
       grid-auto-flow: row;
       align-content: start;
       gap: 4px;
+
+      scroll-margin-block-start: 5em;
     }
 
     article img {
@@ -38,6 +40,10 @@
       text-align: left;
       margin: 0.25em 0;
       order: 3;
+    }
+
+    article:target {
+      border: 1px solid var(--accent3-color);
     }
 
     article.has-image {
