--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -60,8 +60,8 @@
 
     .article-list {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-      grid-template-rows: masonry;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-template-rows: auto;
       gap: 1em;
     }
   </style>
