--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -76,7 +76,8 @@
         <article id="{{ post.time }}" class="{{ "has-image" if image }} {{ "has-long-text" if post.text.length > 200 }} {{ "has-xlong-text" if post.text.length > 400 }}">
           <time datetime="{{ post.time }}">{{ formatDate(post.time) }}</time>
           {% if image %}
-            <img alt="" loading="lazy" src="{{ image["public_id"] | cloudinaryUrl() }}">
+            <img alt="" width="{{ image.width }}" height="{{ image.height }}" loading="lazy" sizes="(min-width: 840px) 300px, 88.43vw"
+                 src="{{ image["public_id"] | cloudinaryUrl() }}">
           {% endif %}
           {% markdown %}
             {{ post.text }}
