Slight UX improvements

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -168,6 +168,13 @@
     { threshold: [1] }
   );
   observer.observe(el);
+
+  const menu = document.getElementById("menu");
+  menu.addEventListener("click", e => {
+    if (e.target.hash) {
+      menu.hidePopover();
+    }
+  });
 </script>
 {% block javascript %}
 {% endblock %}
