--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,6 +1,6 @@
 {% extends 'layouts/master.njk' %}
 
-{% block title %}Studnice fest 2024{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% set bodyClass = "is-hp" %}
 
 {% block head %}
