--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -2,7 +2,7 @@
 
 {% set title = "Novinky" %}
 
-{% block head %}
+{% block head_stylesheets %}
   <style>
     article {
       color-scheme: dark;
