--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -155,7 +155,7 @@
           {% for item in schedule.friday %}
             <div class="lineup__item">
               <time datetime="2024-07-26T{{ item.time }}:00.000+02:00">{{ item.time }}</time>
-              <em>{{ item.title }}</em>
+              <strong>{{ item.title }}</strong>
               <small class="{{ item.stage }}">{{ event.stages[item.stage] }}</small>
             </div>
           {% endfor %}
@@ -165,7 +165,7 @@
           {% for item in schedule.saturday %}
             <div class="lineup__item">
               <time datetime="2024-07-27T{{ item.time }}:00.000+02:00">{{ item.time }}</time>
-              <em>{{ item.title }} </em>
+              <strong>{{ item.title }} </strong>
               <small class="{{ item.stage }}">{{ event.stages[item.stage] }}</small>
             </div>
           {% endfor %}
@@ -176,5 +176,4 @@
 
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
+{% block scripts %}{% endblock %}
