--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -148,7 +148,7 @@
         <h2>Časový harmonogram</h2>
       </header>
       <p>Hudební produkce bude probíhat na třech jevištích&nbsp;&ndash; hlavní stage,
-        stage “Na Vyhlídce” a dětský&nbsp;stan.</p>
+        stage „Na Vyhlídce“ a dětský&nbsp;stan.</p>
       <div class="lineup__days">
         <div>
           <h3>Pátek 26. 7.</h3>
@@ -165,7 +165,7 @@
           {% for item in schedule.saturday %}
             <div class="lineup__item">
               <time datetime="2024-07-27T{{ item.time }}:00.000+02:00">{{ item.time }}</time>
-              <strong>{{ item.title }} </strong>
+              <strong>{{ item.title }}</strong>
               <small class="{{ item.stage }}">{{ event.stages[item.stage] }}</small>
             </div>
           {% endfor %}
