--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -82,7 +82,6 @@
 </header>
 {% block content %}{% endblock %}
 <footer>
-  <hr>
   <section class="footer__contacts">
     <div id="kontakt">
       <h2>Kontakty</h2>
@@ -167,7 +166,7 @@
       </ul>
     </div>
   </section>
-  <p>© 2017 - {{ currentYear }} Eupathia, z.s.; Web vytvořilo <a href="https://hckr.studio/">hckr.studio</a></p>
+  <p>© 2017 - {{ currentYear }} Eupathia, z.s.</p>
 </footer>
 
 <script type="module">
