--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -107,6 +107,7 @@
         <small class="partner">Studnice Fest podporuje Pardubický kraj</small><br>
         <a href="https://www.pardubickykraj.cz/">
           <img src="{{ "pardubicky-kraj.png" | assetUrl("images") }}" width="226" height="50" alt="Pardubický kraj"
+               class="pardubicky-kraj"
                loading="lazy"></a>
       </div>
     </div>
